# connect-killer

./: .dockerignore  .env  .env_template  .gitignore  .gitmodules  164080f7933651c4_0000008c--8a84371aea.bz2  406f02914de1a867_2024-02-05--16-22-28--10--qlog.bz2  Cargo.toml  Dockerfile  README.md  connect-nginx-config  deps.txt  devcontainer.json  docker-compose.yml  docker_install.sh  fresh_seeds.sh  hot_load_assets.sh  hot_load_frontend.sh  install_deps.sh  log.sh  nginx.conf  nginx.txt  notes.md  qlog_worker_load.sh  setup.sh  start.sh  test_re.py
.VSCodeCounter/2024-04-24_22-27-06/: details.md  diff-details.md  diff.md  diff.txt  results.csv  results.json  results.md  results.txt
.VSCodeCounter/2024-05-02_06-37-49/: details.md  diff-details.md  diff.csv  diff.md  diff.txt  results.csv  results.json  results.md  results.txt
assets/views/stats/: param_stats.html  server_usage.html
assets/views/useradmin/: cloudlog.html  devices.html  login.html  main.html  template.html  ulog.html
assets/views/useradmin/route/: home.html  route.html  test.html
athenad/: athenad_test.py  ws_test.py
axum_server/: Cargo.toml
axum_server/src/: main.rs  retest.py  test.py
backend/: README.md  install.sh  start.sh
config/: connect.yaml  development.yaml  production.yaml  test.yaml  useradmin.yaml
examples/: playground.rs
fetch/: collect.py  database.py  helpers.py  requirements.txt
frontend/: index.html  package.json  pnpm-lock.yaml  vite.config.js  vite.config.js.timestamp-1713937336464-3bf26413a2fe3.mjs
frontend/go/: docker-compose.yml
frontend/public/: config.js
frontend/src/: App.jsx  App_old.jsx  Login.jsx  Signup.jsx  analytics-v2.js  analytics.js  index.jsx  initialState.js  main.jsx  store.js
frontend/src/actions/: files.js  index.js  startup.js
frontend/src/components/: anonymous.jsx  explorer.jsx
frontend/src/components/AppDrawer/: index.jsx
frontend/src/components/AppHeader/: AccountMenu.jsx  index.jsx
frontend/src/components/Dashboard/: AddDevice.jsx  DeviceList.jsx  DeviceSettingsModal.jsx
frontend/src/components/DeviceInfo/: index.jsx
frontend/src/components/DriveVideo/: index.jsx
frontend/src/components/DriveView/: Media.jsx
frontend/src/components/IosPwaPopup/: index.jsx
frontend/src/components/Navigation/: index.jsx
frontend/src/components/Prime/: PrimeCheckout.jsx  PrimeManage.jsx
frontend/src/demo/: devices.json  index.js
migration/: Cargo.toml
migration/src/: lib.rs  m20220101_000001_users.rs  m20240424_000002_devices.rs  m20240424_000003_routes.rs  m20240424_000004_segments.rs  m20240424_000005_authorized_users.rs  m20240424_082559_devices.rs  m20240424_101126_devices.rs  m20240424_141802_sements.rs  m20240424_144603_routes.rs  m20240424_155056_authorized_users.rs  m20240425_071518_authorized_users.rs  m20240504_174513_bootlogs.rs  m20240522_001958_add_route_miles.rs  m20240522_001958_add_segment_miles.rs  m20240622_195829_anonlogs.rs  m20240826_165428_add_devices_storage.rs  m20240831_002142_add_users_locations.rs  m20240831_010827_add_devices_locations.rs  m20240831_053056_device_msg_queues.rs  m20250706_165202_add_firehose_to_devices.rs
root/: car_capnp.rs  legacy_capnp.rs  log_capnp.rs  maptile_capnp.rs
rust_keyvalue_tests/: Cargo.toml
rust_keyvalue_tests/src/: main.rs
scripts/: copy_assets.sh
src/: app.rs  build.rs  lib.rs
src/cereal/: car_capnp.rs  custom_capnp.rs  legacy_capnp.rs  log_capnp.rs  maptile_capnp.rs  mod.rs
src/common/: enforce.rs  mkv_helpers.rs  mod.rs  re.rs  types.rs
src/controllers/: auth.rs  connectdata.rs  connectincomming.rs  device_response.rs  directions.rs  maps.rs  mod.rs  params.rs  stats.rs  test.py  test_incoming.py  user.rs  useradmin.rs  v1.rs  v1_responses.rs  v2.rs  ws.rs
src/fixtures/: devices.yaml  routes.yaml  segments.yaml  users.yaml
src/mailers/: auth.rs
src/middleware/: auth.rs  identity.rs  jwt.rs  mod.rs
src/models/: README.md  anonlogs.rs  authorized_users.rs  authorized_users_old.rs  bootlogs.rs  device_msg_queues.rs  devices.rs  mod.rs  routes.rs  segments.rs  sements.rs  test.py  users.rs
src/models/_entities/: anonlogs.rs  authorized_users.rs  bootlogs.rs  device_msg_queues.rs  devices.rs  mod.rs  notes.rs  prelude.rs  routes.rs  segments.rs  sements.rs  users.rs
src/tasks/: cleaner.rs  collect_data.rs  deleter.rs  huggingface.rs  mod.rs  seed.rs  seed_from_mkv.rs  storage_count.rs
src/views/: auth.rs  mod.rs  route.rs  user.rs
src/websockets/: forward.rs  handler.rs  identity.rs  mod.rs
src/workers/: bootlog_parser.rs  jpg_extractor.rs  log_helpers.rs  log_parser.rs  mod.rs  qlog_parser.rs  test.txt
tests/models/: authorized_users.rs  mod.rs  users.rs
tests/requests/: auth.rs  connectdata.rs  connectincomming.rs  mod.rs  notes.rs  prepare_data.rs  sprite.rs  user.rs  useradmin.rs  v1.rs  v2.rs  ws.rs
tests/tasks/: collect_data.rs  deleter.rs  mod.rs  seed.rs  seed_data.rs  seed_from_mkv.rs
tests/workers/: bootlog_parser.rs  jpg_extractor.rs  qlog_parser.rs
