[package]
name = "connect"
version = "0.1.0"
edition = "2021"
build = "src/build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

loco-rs = { version = "0.4.0" }
migration = { path = "migration" }

serde = { version = "1", features = ["derive"] }
serde_json = "1"
eyre = "0.6"
tokio = { version = "1.37.0", default-features = false } 
async-trait = "0.1.80"
tracing = "0.1.40"
chrono = "0.4"
validator = { version = "0.16" }
sea-orm = { version = "1.0.0-rc.1", features = [
  "sqlx-sqlite",
  "sqlx-postgres",
  "runtime-tokio-rustls",
  "macros",
] }

axum = {version = "0.7.1", features = ["multipart", "ws"]}
hyper = "1.3.1"
include_dir = "0.7"
uuid = { version = "1.6.0", features = ["v4"] }
tracing-subscriber = { version = "0.3.17", features = ["env-filter", "json"] }
reqwest = { version = "0.12", features = ["stream", "json"] }
dotenv = "0.15.0"
bytes = "1.6.0"
regex = "~1.10.4"
# view engine i18n
fluent-templates = { version = "0.8.0", features = ["tera"] }
unic-langid = "0.9.4"
capnp = "0.19.3"
capnpc = "0.19.0"
bzip2 = "0.4.3"
anyhow = "1.0.82"
futures = "0.3.30"
async-compression = { version = "0.4.8", features = ["tokio", "bzip2"] }
tokio-util = "0.7.10"
thiserror = "1.0.30"
rusty-sidekiq = {version = "0.8.2", default-features = false}
url = "2.5.0"
tower-http = {version = "0.5.2", features = ["normalize-path"] }
tower-layer = "0.3.2"
percent-encoding = "2.3.1"
futures-util = "0.3.30"
tokio-tungstenite = "0.21.0"
cookie = "0.18.1"
jsonwebtoken = "9"
base64 = "0.22.1"
combine = "4.6.7"

[[bin]]
name = "connect-cli"
path = "src/bin/main.rs"
required-features = []

[dev-dependencies]
serial_test = "2.0.0"
rstest = "0.18.2"
loco-rs = { version = "0.4.0", features = ["testing"] }
insta = { version = "1.34.0", features = ["redactions", "yaml", "filters"] }

[build-dependencies]
capnp = "0.19.3"
capnpc = "0.19.0"
[patch.crates-io]
capnp = { git = "https://github.com/moretore/capnproto-rust.git", branch = "format-text" }
# release with optimizations and no debug info
[profile.release]
opt-level = 3
debug = false
