[package]
name = "connect"
version = "0.1.0"
edition = "2021"
build = "src/build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
loco-rs = { version = "0.8.1"}
#loco-rs = { git = "https://github.com/moretore/loco.git", branch = "connect" }
#loco-rs = { path = "loco/"}
migration = { path = "migration" }

serde = { version = "1", features = ["derive"] }
serde_json = "1"
eyre = "0.6"
tokio = { version = "1.40.0", default-features = false} 
async-trait = "0.1.80"
tracing = "0.1.40"
chrono = "0.4"
validator = { version = "0.16" }
sea-orm = { version = "1.0.0-rc.1", features = [
  "sqlx-sqlite",
  "sqlx-postgres",
  "runtime-tokio-rustls",
  "macros",
] }
rand = "0.8.4"
axum = {version = "0.7.1", features = ["multipart", "ws"]}
axum-extra = { version = "0.9", features = ["cookie"] }
hyper = "1.3.1"
include_dir = "0.7"
uuid = { version = "1.6.0", features = ["v4"] }
tracing-subscriber = { version = "0.3.17", features = ["env-filter", "json"] }
reqwest = { version = "0.12", features = ["stream", "json"] }
dotenv = "0.15.0"
bytes = "1.6.0"
regex = "~1.10.4"
# view engine i18n
fluent-templates = { version = "0.8.0", features = ["tera"] }
unic-langid = "0.9.4"
capnp = "0.19.3"
capnpc = "0.19.0"
bzip2 = "0.4.3"
futures = "0.3.30"
async-compression = { version = "0.4.8", features = ["tokio", "bzip2", "zstd"] }
tokio-util = "0.7.10"
rusty-sidekiq = {version = "0.8.2", default-features = false}
url = "2.5.0"
tower-http = {version = "0.5.2", features = ["normalize-path"] }
tower-layer = "0.3.2"
futures-util = "0.3.30"
tokio-tungstenite = "0.21.0"
cookie = "0.18.1"
jsonwebtoken = "9"
base64 = "0.22.1"
combine = "4.6.7"
http = "1.1.0"
sha2 = "0.10.8"
hmac = "0.12.1"
hex = "0.4.3"
thiserror = "1.0.60"
image = "0.25.1"
axum-server = { version = "0.6", features = ["tls-rustls"] }
rayon = "1.10.0"
ffmpeg-next = "7.0.4"
tempfile = "3.10.1"
once_cell = "1.19.0"
sysinfo = "0.30.12"
time = "0.3.36"
sea-schema = "0.15.0"
indicatif = "0.17.11"
serde_urlencoded = "0.7.1"


[[bin]]
name = "connect-cli"
path = "src/bin/main.rs"
required-features = []

[dev-dependencies]
serial_test = "2.0.0"
rstest = "0.18.2"
loco-rs = { version = "0.8.1"}
#loco-rs = { path = "loco/"}
insta = { version = "1.34.0", features = ["redactions", "yaml", "filters"] }
criterion = "0.5.1"

[build-dependencies]
capnp = "0.19.3"
capnpc = "0.19.0"
[patch.crates-io]
capnp = { git = "https://github.com/moretore/capnproto-rust.git", branch = "format-text" }
# release with optimizations and no debug info

[profile.dev]
opt-level = 0


[profile.release]
opt-level = 3
codegen-units = 1
lto = "fat"

debug = false
