[package]
name = "axum_server"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
axum = "0.7.5"
hyper = "1.3.1"
reqwest = { version = "0.12", features = ["stream", "json"] }
tokio = { version = "1.0", features = ["full"] }
tokio-stream = "0.1"
tower-http = { version = "0.5.0", features = ["trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1.0"
bzip2 = "0.4.4"
async-std = "1.12.0"
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0"
percent-encoding = "2.3.1"
regex = "1.10.4"