[package]
name = "rust_keyvalue_tests"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.12.3", features = ["json"] }
tokio = { version = "1", features = ["full"] }
hex = "0.4"
rand = "0.8"
anyhow = "1.0"
